# Nixtty

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  app.rc  config.toml
include/: ansi.h  config.h  pty.h  renderer.h  terminal.h  unicode.h
src/: ansi.cpp  config.cpp  main.cpp  pty.cpp  pty_posix.cpp  renderer.cpp  terminal.cpp  unicode.cpp
tests/: main.cpp  test.h  test_ansi.cpp  test_config.cpp  test_terminal.cpp  test_unicode.cpp
